--- a/assets/sass/components/_resize.scss
+++ b/assets/sass/components/_resize.scss
@@ -5,7 +5,7 @@
 	.resize-handle {
 		// Appearance
 		width: 8px;
-		border-color: #ccc;
+		border-color: var(--bs-border-color);
 		border-style: none solid;
 		border-width: 1px;
 		cursor: col-resize;
