--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -276,6 +276,33 @@ iframe {
     }
 }
 
+#modulesAccordion .accordion-button {
+    @include focus-with-background-and-color;
+    background-color: var(--bs-primary);
+}
+#modulesAccordion .accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+#modulesAccordion .accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+/* Fix borders with vertically spaced accordion */
+div.spaced-accordion > .accordion-item {
+    border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color);
+    border-radius: var(--bs-accordion-border-radius);
+    margin-top: 1rem;
+}
+div.spaced-accordion > .accordion-item  > .accordion-header > .accordion-button:not(.collapsed) {
+    border-top-left-radius: var(--bs-accordion-inner-border-radius);
+    border-top-right-radius: var(--bs-accordion-inner-border-radius);
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+div.spaced-accordion > .accordion-item  > .accordion-header > .accordion-button.collapsed {
+    border-radius: var(--bs-accordion-inner-border-radius);
+}
+
 /* point progress */
 .progress {
     position: relative;
@@ -403,7 +430,11 @@ collapsed due to narrow viewport) */
 }
 
 /* results table */
-
+table.results-table tbody tr:last-child td {
+    border-bottom: none;
+    border-bottom-left-radius: var(--bs-accordion-inner-border-radius);
+    border-bottom-right-radius: var(--bs-accordion-inner-border-radius);
+}
 table.results-table .category-row {
     font-weight: bold;
 }
