--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -18,12 +18,14 @@
         <label class="form-label" for="id_url">{% translate "IMPORT_CONTENT_CONFIG_URL" %}</label>
         <input type="text" size="60" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
       </div>
-      <button class="aplus-button--default aplus-button--md" type="submit" name="apply"
-        data-bs-toggle="tooltip" title="{% translate 'APPLY_CHANGES_TOOLTIP' %}">{% translate "APPLY_CHANGES" %}</button>
-      <button class="aplus-button--secondary aplus-button--md" type="submit" name="reset"
-        data-bs-toggle="tooltip" title="{% translate 'OVERRIDE_COURSE_CONFIGURATION_TOOLTIP' %}">{% translate "OVERRIDE" %}</button>
-      <button class="aplus-button--secondary aplus-button--md" type="submit" name="cache"
-        data-bs-toggle="tooltip" title="{% translate 'CLEAR_CONTENT_CACHE_TOOLTIP' %}">{% translate "CLEAR_CONTENT_CACHE" %}</button>
+      <div class="d-flex flex-wrap gap-1">
+        <button class="aplus-button--default aplus-button--md" type="submit" name="apply"
+          data-bs-toggle="tooltip" title="{% translate 'APPLY_CHANGES_TOOLTIP' %}">{% translate "APPLY_CHANGES" %}</button>
+        <button class="aplus-button--secondary aplus-button--md" type="submit" name="reset"
+          data-bs-toggle="tooltip" title="{% translate 'OVERRIDE_COURSE_CONFIGURATION_TOOLTIP' %}">{% translate "OVERRIDE" %}</button>
+        <button class="aplus-button--secondary aplus-button--md" type="submit" name="cache"
+          data-bs-toggle="tooltip" title="{% translate 'CLEAR_CONTENT_CACHE_TOOLTIP' %}">{% translate "CLEAR_CONTENT_CACHE" %}</button>
+      </div>
     </form>
     {% if instance.build_log_url %}
     <a class="aplus-button--secondary aplus-button--md page-modal mt-1" href="{{ instance|url:'course-build-log' }}" role="button">
