--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -92,74 +92,76 @@
 	</button>
 	{% endfor %}
 </p>
-<table class="table table-bordered{% if not limited or count < default_limit %} filtered-table ordered-table{% endif %}" id="submissions_table">
-	<thead>
-				<tr>
-						<th>{% translate "SUBMITTERS" %} {{percentage_graded}} {% translate "GRADED" %}</th>
-						<th>{% translate "TIME" %}</th>
-						<th>{% translate "STATUS" %}</th>
-						<th>{% translate "GRADE" %}</th>
-						<th>{% translate "TAGS" %}</th>
-						<th
-							data-filter-type="options"
-							data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
-							data-order-disable="true"
-						>
-								{% translate "ASSESSED_MANUALLY" %}
-						</th>
-						<th data-filter-type="none" data-order-disable="true">{% translate "INSPECT" %}</th>
-				</tr>
-		</thead>
-		<tbody>
-				{% for submission in submissions %}
-				<tr id="submission-{{ submission.id }}">
-						<td>
-								{% profiles submission.submitters.all instance is_teacher %}
-						</td>
-						<td data-datetime="{{ submission.submission_time|date:'Y-m-d H:i:s' }}">
-								{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
-								{% if submission.late_penalty_applied %}
-								<span class="badge text-bg-warning">
-										{% blocktranslate trimmed with percent=submission.late_penalty_applied|percent %}
-											LATE_W_PENALTY -- {{ percent }}
-										{% endblocktranslate %}
-								</span>
-								{% endif %}
-						</td>
-						<td>
-								{{ submission.status|submission_status }}
-						</td>
-						<td>
-								{% format_points submission.grade feedback_revealed False %}
-						</td>
-						<td id="submission_tags">
-								{% for tagging in submission.submission_taggings.all %}
-									{{ tagging.tag|colortag }}
-								{% endfor %}
-						</td>
-						<td>
-								{% if submission.grader %}
-										<i class="bi-check-lg"></i>
-										{% translate "YES" %}
-								{% else %}
-										<i class="bi-x-lg"></i>
-										{% translate "NO" %}
-								{% endif %}
-						</td>
-						<td>
-								<a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--xs">
-										<i class="bi-zoom-in" aria-hidden="true"></i>
-										{% translate "INSPECT" %}
-								</a>
-						</td>
-				</tr>
-				{% empty %}
-				<tr>
-						<td class="5">{% translate "NO_SUBMISSIONS" %}</td>
-				</tr>
-				{% endfor %}
-		</tbody>
-</table>
+<div class="table-responsive">
+	<table class="table table-bordered{% if not limited or count < default_limit %} filtered-table ordered-table{% endif %}" id="submissions_table">
+		<thead>
+					<tr>
+							<th>{% translate "SUBMITTERS" %} {{percentage_graded}} {% translate "GRADED" %}</th>
+							<th>{% translate "TIME" %}</th>
+							<th>{% translate "STATUS" %}</th>
+							<th>{% translate "GRADE" %}</th>
+							<th>{% translate "TAGS" %}</th>
+							<th
+								data-filter-type="options"
+								data-filter-options="{% translate 'YES' %}|{% translate 'NO' %}"
+								data-order-disable="true"
+							>
+									{% translate "ASSESSED_MANUALLY" %}
+							</th>
+							<th data-filter-type="none" data-order-disable="true">{% translate "INSPECT" %}</th>
+					</tr>
+			</thead>
+			<tbody>
+					{% for submission in submissions %}
+					<tr id="submission-{{ submission.id }}">
+							<td>
+									{% profiles submission.submitters.all instance is_teacher %}
+							</td>
+							<td data-datetime="{{ submission.submission_time|date:'Y-m-d H:i:s' }}">
+									{{ submission.submission_time|date:'DATETIME_SECONDS_FORMAT' }}
+									{% if submission.late_penalty_applied %}
+									<span class="badge text-bg-warning">
+											{% blocktranslate trimmed with percent=submission.late_penalty_applied|percent %}
+												LATE_W_PENALTY -- {{ percent }}
+											{% endblocktranslate %}
+									</span>
+									{% endif %}
+							</td>
+							<td>
+									{{ submission.status|submission_status }}
+							</td>
+							<td>
+									{% format_points submission.grade feedback_revealed False %}
+							</td>
+							<td id="submission_tags">
+									{% for tagging in submission.submission_taggings.all %}
+										{{ tagging.tag|colortag }}
+									{% endfor %}
+							</td>
+							<td>
+									{% if submission.grader %}
+											<i class="bi-check-lg"></i>
+											{% translate "YES" %}
+									{% else %}
+											<i class="bi-x-lg"></i>
+											{% translate "NO" %}
+									{% endif %}
+							</td>
+							<td>
+									<a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--xs">
+											<i class="bi-zoom-in" aria-hidden="true"></i>
+											{% translate "INSPECT" %}
+									</a>
+							</td>
+					</tr>
+					{% empty %}
+					<tr>
+							<td class="5">{% translate "NO_SUBMISSIONS" %}</td>
+					</tr>
+					{% endfor %}
+			</tbody>
+	</table>
+</div>
 
 {% include "exercise/staff/_regrade_submissions.html" %}
 <script src="{% static 'exercise/filter_submissions_by_tag.js' %}"></script>
