--- a/course/templates/course/_course_menu.html
+++ b/course/templates/course/_course_menu.html
@@ -18,7 +18,7 @@
 	<h4 class="course-menu-label" id="course-menu-heading">{% translate "COURSE" %}</h4>
 	<div class="course-sidebar-button d-none d-md-block">
 		<button
-			class="aplus-button--secondary course-sidebar-collapser"
+			class="aplus-button--secondary course-sidebar-collapser d-flex align-items-center justify-content-center"
 			title="{% translate "MINIMISE_SIDEBAR" %}"
 			aria-label="{% translate "MINIMISE_SIDEBAR" %}"
 		>
