--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<ul class="dropdown-menu" style="position: absolute; left: 0; right: auto" >
+<ul class="dropdown-menu position-absolute start-0">
 	{% for entry in instances %}
 	{% if entry.divider %}
 	<li role="presentation" class="dropdown-divider"></li>
