--- a/course/templates/course/staff/participants.html
+++ b/course/templates/course/staff/participants.html
@@ -16,7 +16,7 @@
 
 	{% if is_teacher %}
 	<p>
-		<a class="aplus-button--secondary aplus-button--sm" role="button" href="{{ instance|url:'enroll-students' }}">
+		<a class="aplus-button--default aplus-button--sm" role="button" href="{{ instance|url:'enroll-students' }}">
 			<i class="bi-person-fill" aria-hidden="true"></i>
 			{% translate "ENROLL_STUDENTS" %}
 		</a>
