--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -36,7 +36,7 @@
 
 {% else %}
 {% if difficulty %}
-<span class="difficulty align-middle">{{ difficulty }}</span>
+<span class="difficulty align-items-center">{{ difficulty }}</span>
 {% endif %}
 <span class="badge text-bg-secondary rounded-pill {{ classes }}"
   {% if badge_title %}data-bs-toggle="tooltip" data-bs-placement="bottom"{% endif %}
