--- a/course/templates/course/staff/groups.html
+++ b/course/templates/course/staff/groups.html
@@ -15,7 +15,7 @@
 
   <p>
     {% translate "NUMBER_OF_GROUPS" %} <strong>{{ groups|length }}</strong>
-    <a class="aplus-button--secondary aplus-button--xs" role="button" href="{{ instance|url:'groups-add' }}">
+    <a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'groups-add' }}">
       <i class="far fa-plus-sign" aria-hidden="true"></i>
       {% translate "ADD_NEW" %}
     </a>
