--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -156,6 +156,7 @@ $gray-650: #5B636A;
 @import 'components/table';
 @import 'pages/assessment';
 @import 'pages/menu-items';
+@import 'pages/participants';
 @import 'pages/profile-page';
 
 /*!
