--- a/exercise/templates/exercise/exercise.html
+++ b/exercise/templates/exercise/exercise.html
@@ -12,7 +12,7 @@
 {% block js-translations %}
 <link
 	data-translation
-	rel="preload"
+	rel="prefetch"
 	as="fetch"
 	crossorigin="anonymous"
 	type="application/json"
