--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -135,7 +135,7 @@
 							</td>
 							<td id="submission_tags">
 									{% for tagging in submission.submission_taggings.all %}
-										{{ tagging.tag|colortag:"size=sm" }}
+										{{ tagging.tag|colortag:"size=xs" }}
 									{% endfor %}
 							</td>
 							<td>
