--- a/course/templates/course/staff/all_submissions_table.html
+++ b/course/templates/course/staff/all_submissions_table.html
@@ -87,7 +87,7 @@
 				</td>
 				<td id="submission_tags">
 				{% for tagging in summary.submission.submission_taggings.all %}
-					{{ tagging.tag|colortag:"size=sm" }}
+					{{ tagging.tag|colortag:"size=xs" }}
 				{% endfor %}
 				</td>
 				<td>
